--- a/SFML2DFighting/SFML2DFighting.vcxproj
+++ b/SFML2DFighting/SFML2DFighting.vcxproj
@@ -129,12 +129,14 @@
   <ItemGroup>
     <ClCompile Include="fighter.cpp" />
     <ClCompile Include="Hitbox.cpp" />
+    <ClCompile Include="Scene.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="Wall.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="fighter.h" />
     <ClInclude Include="Hitbox.h" />
+    <ClInclude Include="Scene.h" />
     <ClInclude Include="Wall.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
