--- a/SFML2DFighting/SFML2DFighting.vcxproj
+++ b/SFML2DFighting/SFML2DFighting.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AI.cpp" />
     <ClCompile Include="fighter.cpp" />
     <ClCompile Include="Hitbox.cpp" />
     <ClCompile Include="Scene.cpp" />
@@ -134,6 +135,7 @@
     <ClCompile Include="Wall.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AI.h" />
     <ClInclude Include="fighter.h" />
     <ClInclude Include="Hitbox.h" />
     <ClInclude Include="Scene.h" />
